neverware: fix WebGL on MacBook 7,1

Got this fix from https://bugs.freedesktop.org/show_bug.cgi?id=108500:

> Given the amount of time that this has gone on unfixed, I think we
> should just make mcp89 point at mcp77_mmu_new instead of g84_mmu_new
> (in nvkm/engine/device/base.c).
>
> Literally the only difference between those two is the ability to
> use compression.

https://neverware.atlassian.net/browse/OVER-9882